Update tests and added delete user endpoint
